--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -73,8 +73,8 @@
             android:id="@+id/largestFileSize"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@{viewModel.largestFileSize}"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            app:file_size="@{viewModel.largestFileSize}"
             app:layout_constraintBottom_toBottomOf="@+id/largestFileName"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/largestFileName"
